DATE       AUTHOR       CHANGE
---------- ------------ -------------------------------------------------------
2003-08-22 allenb       Initial version
                        NEW VERSION 0.0.1
2003-08-22 allenb       Added initial implementation of Options addon.
                        NEW VERSION 0.1.0

